--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ li {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/hero.jpg);
+    url(../images/1/1.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -213,6 +213,31 @@ li {
   width: 100%;
   height: 100%;
   text-align: center;
+}
+/* 2x ==============================================*/
+
+@media only screen and (min-resolution: 192dpi) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/1/1@2x.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+}
+/* 3x ==============================================*/
+@media only screen and (min-resolution: 288dpi) {
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/1/1@3x.jpg);
+    background-position: center;
+    background-size: cover;
+  }
 }
 .hero_title {
   display: block;
@@ -994,6 +1019,40 @@ li {
   }
 
   /* herooo======================================= */
+
+  /* 2x ==============================================*/
+  .hero {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/2/2.jpg);
+    background-position: center;
+    background-size: cover;
+  }
+  @media only screen and (min-resolution: 192dpi) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/2/2@2x.jpg);
+      background-position: center;
+      background-size: cover;
+    }
+  }
+  /* 3x ==============================================*/
+  @media only screen and (min-resolution: 288dpi) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/2/2@3x.jpg);
+      background-position: center;
+      background-size: cover;
+    }
+  }
   .hero_title {
     font-weight: 700;
     font-size: 56px;
@@ -1210,7 +1269,7 @@ li {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(../images/hero.jpg);
+      url(../images/3/3.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -1286,6 +1345,7 @@ li {
     margin-bottom: 8px;
   }
   .feature_header {
+    text-align: start;
     margin-bottom: 8px;
     /* typography; */
 
@@ -1663,5 +1723,31 @@ li {
     border-radius: 4px;
     padding: 72px 24px 24px 24px;
     transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  /* 2x ==============================================*/
+
+  @media only screen and (min-resolution: 192dpi) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/3/3@2x.jpg);
+      background-position: center;
+      background-size: cover;
+    }
+  }
+  /* 3x ==============================================*/
+  @media only screen and (min-resolution: 288dpi) {
+    .hero {
+      background-image: linear-gradient(
+          rgba(46, 47, 66, 0.7),
+          rgba(46, 47, 66, 0.7)
+        ),
+        url(../images/3/3@3x.jpg);
+      background-position: center;
+      background-size: cover;
+    }
   }
 }
