--- a/css/styles.css
+++ b/css/styles.css
@@ -209,10 +209,11 @@ li {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 768px;
+  max-width: 100vw;
   width: 100%;
   height: 100%;
   text-align: center;
+  object-fit: cover;
 }
 /* 2x ==============================================*/
 
@@ -1273,8 +1274,8 @@ li {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    max-width: 1440px;
-    width: 100%;
+    /* max-width: 1440px; */
+    max-width: 100vw;
     height: 100%;
     text-align: center;
     background-size: cover;
