--- a/css/styles.css
+++ b/css/styles.css
@@ -965,9 +965,7 @@ li {
   gap: 24px;
 }
 /* adaptive display =================================================================*/
-/* adaptive display =================================================================*/
-/* adaptive display =================================================================*/
-/* adaptive display =================================================================*/
+
 .container {
   max-width: 320px;
   padding-left: 16px;
@@ -1041,7 +1039,6 @@ li {
 
   /* herooo======================================= */
 
-  /* 2x ==============================================*/
   .hero {
     background-image: linear-gradient(
         rgba(46, 47, 66, 0.7),
@@ -1109,6 +1106,9 @@ li {
   }
   .feature_item:nth-child(n + 3) {
     margin-bottom: 0;
+  }
+  .feature_header {
+    text-align: start;
   }
 
   /* Our Team 🫠======================================================================================*/
@@ -1316,7 +1316,6 @@ li {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    /* max-width: 1440px; */
     max-width: 1440px;
     height: 100%;
     text-align: center;
@@ -1807,31 +1806,5 @@ li {
     border-radius: 4px;
     padding: 72px 24px 24px 24px;
     transition: transform 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-  }
-
-  /* 2x ==============================================*/
-
-  @media only screen and (min-resolution: 192dpi) {
-    .hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/3/3@2x.jpg);
-      background-position: center;
-      background-size: cover;
-    }
-  }
-  /* 3x ==============================================*/
-  @media only screen and (min-resolution: 288dpi) {
-    .hero {
-      background-image: linear-gradient(
-          rgba(46, 47, 66, 0.7),
-          rgba(46, 47, 66, 0.7)
-        ),
-        url(../images/3/3@3x.jpg);
-      background-position: center;
-      background-size: cover;
-    }
   }
 }
